# apps/api/src/modules/bookmarks/dto/query-bookmark.dto.ts
@@ -1,11 +1,52 @@
-import { Type } from "class-transformer";
-import { IsInt, IsOptional, IsString, Max, Min } from "class-validator";
+import { Transform, Type } from "class-transformer";
+import {
+  IsArray,
+  IsDateString,
+  IsIn,
+  IsInt,
+  IsOptional,
+  IsString,
+  IsUUID,
+  Max,
+  Min,
+} from "class-validator";
 import { PaginationDto } from "@/common/dto/pagination.dto";
 
 export class QueryBookmarkDto extends PaginationDto {
   @IsOptional()
   @IsString()
   search?: string;
+
+  @IsOptional()
+  @IsUUID()
+  folder?: string;
+
+  @IsOptional()
+  @Transform(({ value }) => {
+    if (Array.isArray(value)) {
+      return value;
+    }
+    if (typeof value === "string") {
+      return [value];
+    }
+    return value;
+  })
+  @IsArray()
+  @Type(() => String)
+  @IsUUID("4", { each: true })
+  tags?: string[];
+
+  @IsOptional()
+  @IsDateString()
+  dateFrom?: string;
+
+  @IsOptional()
+  @IsDateString()
+  dateTo?: string;
+
+  @IsOptional()
+  @IsIn(["Most Recent", "Oldest First", "Alphabetical"])
+  sort?: string;
 
   @IsOptional()
   @Type(() => Number)
